adicionando h2 e texto ao p

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="box" id="box-9"></div>
         
         <div id="score-container">
+            <h2>Placar:</h2>
             <span class="score-box">
                 <span id="x-score">X:</span>:
                 <span id="score-1">0</span>
@@ -45,7 +46,7 @@
     </div>
 
     <div id="message" class="hide">
-        <p></p>
+        <p>Teste</p>
     </div>
     <script src="/js/script.js"></script>
 </body>
