--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button id="contraComputador">Contra o Computador</button>
     </div>
 
-    <div id="container" class="hide">
+    <div id="container" class="">
         <div class="box" id="box-1"></div>
         <div class="box" id="box-2"></div>
         <div class="box" id="box-3"></div>
